@@ -1,2 +1,7 @@
 # AliyunECSSecurityGroupsEditer
 Aliyun ECS Security Groups Permission UI Editer
+
+# runtime config
+```shell
+--module-path "\path\to\javafx-sdk-17\lib" --add-modules javafx.controls,javafx.fxml 
+```
